module.jai


// Basic shapes drawing functions
DrawPixel                 :: (posX: s32, posY: s32, color: Color) #foreign raylib;
DrawPixelV                :: (position: Vector2, color: Color) #foreign raylib;
DrawLine                  :: (startPosX: s32, startPosY: s32, endPosX: s32, endPosY: s32, color: Color) #foreign raylib;
DrawLineV                 :: (startPos: Vector2, endPos: Vector2, color: Color) #foreign raylib;
DrawLineEx                :: (startPos: Vector2, endPos: Vector2, thick: float32, color: Color) #foreign raylib;
DrawLineBezier            :: (startPos: Vector2, endPos: Vector2, thick: float32, color: Color) #foreign raylib;
DrawLineStrip             :: (points: *Vector2, numPoints: s32, color: Color) #foreign raylib;
DrawCircle                :: (centerX: s32, centerY: s32, radius: float32, color: Color) #foreign raylib;
DrawCircleSector          :: (center: Vector2, radius: float32, startAngle: s32, endAngle: s32, segments: s32, color: Color) #foreign raylib;
DrawCircleSectorLines     :: (center: Vector2, radius: float32, startAngle: s32, endAngle: s32, segments: s32, color: Color) #foreign raylib;
DrawCircleGradient        :: (centerX: s32, centerY: s32, radius: float32, color1: Color, color2: Color) #foreign raylib;
DrawCircleV               :: (center: Vector2, radius: float32, color: Color) #foreign raylib;
DrawCircleLines           :: (centerX: s32, centerY: s32, radius: float32, color: Color) #foreign raylib;
DrawEllipse               :: (centerX: s32, centerY: s32, radiusH: float32, radiusV: float32, color: Color) #foreign raylib;
DrawEllipseLines          :: (centerX: s32, centerY: s32, radiusH: float32, radiusV: float32, color: Color) #foreign raylib;
DrawRing                  :: (center: Vector2, innerRadius: float32, outerRadius: float32, startAngle: s32, endAngle: s32, segments: s32, color: Color) #foreign raylib;
DrawRingLines             :: (center: Vector2, innerRadius: float32, outerRadius: float32, startAngle: s32, endAngle: s32, segments: s32, color: Color) #foreign raylib;
DrawRectangle             :: (posX: s32, posY: s32, width: s32, height: s32, color: Color) #foreign raylib;
DrawRectangleV            :: (position: Vector2, size: Vector2, color: Color) #foreign raylib;
DrawRectangleRec          :: (rec: Rectangle, color: Color) #foreign raylib;
DrawRectanglePro          :: (rec: Rectangle, origin: Vector2, rotation: float32, color: Color) #foreign raylib;
DrawRectangleGradientV    :: (posX: s32, posY: s32, width: s32, height: s32, color1: Color, color2: Color) #foreign raylib;
DrawRectangleGradientH    :: (posX: s32, posY: s32, width: s32, height: s32, color1: Color, color2: Color) #foreign raylib;
DrawRectangleGradientEx   :: (rec: Rectangle, col1: Color, col2: Color, col3: Color, col4: Color) #foreign raylib;
DrawRectangleLines        :: (posX: s32, posY: s32, width: s32, height: s32, color: Color) #foreign raylib;
DrawRectangleLinesEx      :: (rec: Rectangle, lineThick: s32, color: Color) #foreign raylib;
DrawRectangleRounded      :: (rec: Rectangle, roundness: float32, segments: s32, color: Color) #foreign raylib;
DrawRectangleRoundedLines :: (rec: Rectangle, roundness: float32, segments: s32, lineThick: s32, color: Color) #foreign raylib;
DrawTriangle              :: (v1: Vector2, v2: Vector2, v3: Vector2, color: Color) #foreign raylib;
DrawTriangleLines         :: (v1: Vector2, v2: Vector2, v3: Vector2, color: Color) #foreign raylib;
DrawTriangleFan           :: (points: *Vector2, numPoints: s32, color: Color) #foreign raylib;
DrawTriangleStrip         :: (points: *Vector2, pointsCount: s32, color: Color) #foreign raylib;
DrawPoly                  :: (center: Vector2, sides: s32, radius: float32, rotation: float32, color: Color) #foreign raylib;
DrawPolyLines             :: (center: Vector2, sides: s32, radius: float32, rotation: float32, color: Color) #foreign raylib;

// Basic shapes collision detection functions
CheckCollisionRecs          :: (rec1: Rectangle, rec2: Rectangle) -> bool #foreign raylib;
CheckCollisionCircles       :: (center1: Vector2, radius1: float32, center2: Vector2, radius2: float32) -> bool #foreign raylib;
CheckCollisionCircleRec     :: (center: Vector2, radius: float32, rec: Rectangle) -> bool #foreign raylib;
GetCollisionRec             :: (rec1: Rectangle, rec2: Rectangle) -> Rectangle #foreign raylib;
CheckCollisionPointRec      :: (point: Vector2, rec: Rectangle) -> bool #foreign raylib;
CheckCollisionPointCircle   :: (point: Vector2, center: Vector2, radius: float32) -> bool #foreign raylib;
CheckCollisionPointTriangle :: (point: Vector2, p1: Vector2, p2: Vector2, p3: Vector2) -> bool #foreign raylib;

// Image loading functions
LoadImage              :: (fileName: *u8) -> Image #foreign raylib;
LoadImageEx            :: (pixels: *Color, width: s32, height: s32) -> Image #foreign raylib;
LoadImagePro           :: (data: *void, width: s32, height: s32, format: s32) -> Image #foreign raylib;
LoadImageRaw           :: (fileName: *u8, width: s32, height: s32, format: s32, headerSize: s32) -> Image #foreign raylib;
UnloadImage            :: (image: Image) #foreign raylib;
ExportImage            :: (image: Image, fileName: *u8) #foreign raylib;
ExportImageAsCode      :: (image: Image, fileName: *u8) #foreign raylib;
GetImageData           :: (image: Image) -> *Color #foreign raylib;
GetImageDataNormalized :: (image: Image) -> *Vector4 #foreign raylib;

// Image generation functions
GenImageColor          :: (width: s32, height: s32, color: Color) -> Image #foreign raylib;
GenImageGradientV      :: (width: s32, height: s32, top: Color, bottom: Color) -> Image #foreign raylib;
GenImageGradientH      :: (width: s32, height: s32, left: Color, right: Color) -> Image #foreign raylib;
GenImageGradientRadial :: (width: s32, height: s32, density: float32, inner: Color, outer: Color) -> Image #foreign raylib;
GenImageChecked        :: (width: s32, height: s32, checksX: s32, checksY: s32, col1: Color, col2: Color) -> Image #foreign raylib;
GenImageWhiteNoise     :: (width: s32, height: s32, factor: float32) -> Image #foreign raylib;
GenImagePerlinNoise    :: (width: s32, height: s32, offsetX: float32, offsetY: float32, scale: float32) -> Image #foreign raylib;
GenImageCellular       :: (width: s32, height: s32, tileSize: s32) -> Image #foreign raylib;

// Image manipulation functions
ImageCopy             :: (image: Image) -> Image #foreign raylib;
ImageFromImage        :: (image: Image, rec: Rectangle) -> Image #foreign raylib;
ImageText             :: (text: *u8, fontSize: s32, color: Color) -> Image #foreign raylib;
ImageTextEx           :: (font: Font, text: *u8, fontSize: float32, spacing: float32, tint: Color) -> Image #foreign raylib;
ImageToPOT            :: (image: *Image, fillColor: Color) #foreign raylib;
ImageFormat           :: (image: *Image, newFormat: s32) #foreign raylib;
ImageAlphaMask        :: (image: *Image, alphaMask: Image) #foreign raylib;
ImageAlphaClear       :: (image: *Image, color: Color, threshold: float32) #foreign raylib;
ImageAlphaCrop        :: (image: *Image, threshold: float32) #foreign raylib;
ImageAlphaPremultiply :: (image: *Image) #foreign raylib;
ImageCrop             :: (image: *Image, crop: Rectangle) #foreign raylib;
ImageResize           :: (image: *Image, newWidth: s32, newHeight: s32) #foreign raylib;
ImageResizeNN         :: (image: *Image, newWidth: s32, newHeight: s32) #foreign raylib;
ImageResizeCanvas     :: (image: *Image, newWidth: s32, newHeight: s32, offsetX: s32, offsetY: s32, color: Color) #foreign raylib;
ImageMipmaps          :: (image: *Image) #foreign raylib;
ImageDither           :: (image: *Image, rBpp: s32, gBpp: s32, bBpp: s32, aBpp: s32) #foreign raylib;
ImageFlipVertical     :: (image: *Image) #foreign raylib;
ImageFlipHorizontal   :: (image: *Image) #foreign raylib;
ImageRotateCW         :: (image: *Image) #foreign raylib;
ImageRotateCCW        :: (image: *Image) #foreign raylib;
ImageColorTint        :: (image: *Image, color: Color) #foreign raylib;
ImageColorInvert      :: (image: *Image) #foreign raylib;
ImageColorGrayscale   :: (image: *Image) #foreign raylib;
ImageColorContrast    :: (image: *Image, contrast: float32) #foreign raylib;
ImageColorBrightness  :: (image: *Image, brightness: s32) #foreign raylib;
ImageColorReplace     :: (image: *Image, color: Color, replace: Color) #foreign raylib;
ImageExtractPalette   :: (image: Image, maxPaletteSize: s32, extractCount: *s32) -> *Color #foreign raylib;
GetImageAlphaBorder   :: (image: Image, threshold: float32) -> Rectangle #foreign raylib;

// Image drawing functions
ImageClearBackground    :: (dst: *Image, color: Color) #foreign raylib;
ImageDrawPixel          :: (dst: *Image, posX: s32, posY: s32, color: Color) #foreign raylib;
ImageDrawPixelV         :: (dst: *Image, position: Vector2, color: Color) #foreign raylib;
ImageDrawLine           :: (dst: *Image, startPosX: s32, startPosY: s32, endPosX: s32, endPosY: s32, color: Color) #foreign raylib;
ImageDrawLineV          :: (dst: *Image, start: Vector2, end: Vector2, color: Color) #foreign raylib;
ImageDrawCircle         :: (dst: *Image, centerX: s32, centerY: s32, radius: s32, color: Color) #foreign raylib;
ImageDrawCircleV        :: (dst: *Image, center: Vector2, radius: s32, color: Color) #foreign raylib;
ImageDrawRectangle      :: (dst: *Image, posX: s32, posY: s32, width: s32, height: s32, color: Color) #foreign raylib;
ImageDrawRectangleV     :: (dst: *Image, position: Vector2, size: Vector2, color: Color) #foreign raylib;
ImageDrawRectangleRec   :: (dst: *Image, rec: Rectangle, color: Color) #foreign raylib;
ImageDrawRectangleLines :: (dst: *Image, rec: Rectangle, thick: s32, color: Color) #foreign raylib;
ImageDraw               :: (dst: *Image, src: Image, srcRec: Rectangle, dstRec: Rectangle, tint: Color) #foreign raylib;
ImageDrawText           :: (dst: *Image, position: Vector2, text: *u8, fontSize: s32, color: Color) #foreign raylib;
ImageDrawTextEx         :: (dst: *Image, position: Vector2, font: Font, text: *u8, fontSize: float32, spacing: float32, color: Color) #foreign raylib;

// Texture loading functions
LoadTexture          :: (fileName:  *u8) -> Texture2D #foreign raylib;
LoadTextureFromImage :: (image: Image) -> Texture2D #foreign raylib;
LoadTextureCubemap   :: (image: Image, layoutType: s32) -> TextureCubemap #foreign raylib;
LoadRenderTexture    :: (width: s32, height: s32) -> RenderTexture2D #foreign raylib;
UnloadTexture        :: (texture: Texture2D) #foreign raylib;
UnloadRenderTexture  :: (target: RenderTexture2D) #foreign raylib;
UpdateTexture        :: (texture: Texture2D, pixels: *void) #foreign raylib;
GetTextureData       :: (texture: Texture2D) -> Image #foreign raylib;
GetScreenData        :: () -> Image #foreign raylib;

// Texture configuration functions
GenTextureMipmaps :: (texture: *Texture2D) #foreign raylib;
SetTextureFilter  :: (texture: Texture2D, filterMode: s32) #foreign raylib;
SetTextureWrap    :: (texture: Texture2D, wrapMode: s32) #foreign raylib;

NPatchInfo :: struct {
    sourceRec: Rectangle;
    left: s32;
    top: s32;
    right: s32;
    bottom: s32;
    type: s32;
}
